--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
+    compile 'com.android.support:cardview-v7:25.0.0'
 }
